Document protobuf fix and complete Week 17
- Add comprehensive protobuf fix documentation to CLAUDE.md
- Document resolution for VerifyError and ARM64 Arrow issues
- Update IMPLEMENTATION_PLAN.md with Week 17 completion status
- Add PROTOBUF_FIX_REPORT.md for detailed fix history
- Update connect-server pom.xml with provided scope for spark-connect_2.13
- Clean up temporary test files

Week 17 achieved 100% validation on 34 TPC-DS DataFrame API queries.
Server is now operational after resolving dependency conflicts.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>